0.3
===

 - Issue51: Alle Datumsfelder haben nun die Möglichkeit auch eine Zeit mit
   anzugeben. Das Format der Datumsfelder wurde auf "deutsch" geändert.
 - Issue16: Das Feld "Ursprungszeit" für die Probe wurde zunächst entfernt. Es
   findet hierzu noch interne Klärung beim BFS statt.
 - Issue34: Das Feld für Kommentare (Proben, Messung) ist nun eine Auswahliste
   aus den verfügbaren Messstellen.
 - Issue17: Das Auswahlfeld für den Probenzusatzwert ist beim Bearbeiten von
   bestehenden Proben nicht bearbeitbar. (readonly).

0.2
===

 - Initial Version of the Changes.txt files